change title inside html page

--- a/OJ/templates/index.html
+++ b/OJ/templates/index.html
@@ -1,4 +1,11 @@
 {% extends 'layout.html' %}
+
+
+{% block title %}
+    Online Judge
+{% endblock %}
+
+
 {% block content %}
 
 <h3 id="compilerslanguageruntimes">Compilers &amp; Language Runtimes</h3>
