--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -3,9 +3,9 @@
 <html>
 
 <head>
-    <title> {{ title }} </title>
-    <meta name="viewport" content="width = device-width, initial-scale =1" >
-    <link rel = "icon" type="image/x-icon" href="{% static 'shortcut_icon.png' %}" >
+    <title> {% block title %} {% endblock %}</title>
+    <meta name="viewport" content="width = device-width, initial-scale =1">
+    <link rel="icon" type="image/x-icon" href="{% static 'shortcut_icon.png' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    
+
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
