Added signin app , template

--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -54,7 +54,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li><a href="#"> <span class="glyphicon glyphicon-bell"> </span> Notifications </a></li> -->
-                    <li><a href="#"> Sign In</a></li>
+                    <li><a href="{% url 'signin' %}"> Sign In</a></li>
                     <li><a href="{% url 'signup' %}"> Sign Up </a></li>
                 </ul>
             </div>
