--- a/OJ/templates/signup.html
+++ b/OJ/templates/signup.html
@@ -11,7 +11,7 @@ Sign Up
     {% csrf_token %}
 
     <p>
-        <label for="id_handle">Username:</label><br>
+        <label for="id_handle">Handle:</label><br>
         <input type="text" name="handle" maxlength="32" autofocus required id="id_handle">
 
 
