--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -55,7 +55,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li><a href="#"> <span class="glyphicon glyphicon-bell"> </span> Notifications </a></li> -->
                     {% if request.session.handle %}
-                    <li><a href="#"> {{ request.session.handle }} </a></li>
+                    <li><a href="{% url 'profile' request.session.handle %}"> {{ request.session.handle }} </a></li>
                     <li><a href="{% url 'signout' %}"> Sign Out </a></li>
                     {% else %}
                     <li><a href="{% url 'signin' %}"> Sign In</a></li>
