DDL Paricipant -> PARTICIPANT Added ratings App , SQL Code aka Models ,  Template , View , URL Added Custom URL acceptor for user handle (only discards whitespace)

--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -50,7 +50,7 @@
 
                 <ul class="nav navbar-nav">
                     <li><a href="#">Contest</a></li>
-                    <li><a href="#">Rating</a></li>
+                    <li><a href="{% url 'ratings' %}">Rating</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li><a href="#"> <span class="glyphicon glyphicon-bell"> </span> Notifications </a></li> -->
