Modified profile template

--- a/OJ/templates/profile.html
+++ b/OJ/templates/profile.html
@@ -55,18 +55,18 @@
             </h1>
 
             <div style="margin-top: 0.5em;">
-               
-               <div style="font-size: 0.8em; color: #777;"> {{ user_name }}
-                  {% if country_id %}%
-               , <a href="{% url 'country_rating' country_id %}%"> {{ country_rating }} </a>
-                  {% endif %}
 
+               <div style="font-size: 0.8em; color: #777;"> {{ user_name }}
+                  {% if country_id %}
+                  , <a href="{% url 'country_rating' country_id %}"> {{ country_rating }} </a>
+                  {% endif %}
                </div>
-                  {% if institution_id %}
-               <div style="font-size: 0.8em; color: #777;">From <a href="{% url 'institution_rating' institution_id %}">{{ institution_rating }}</a>
+               {% if institution_id %}
+               <div style="font-size: 0.8em; color: #777;">From <a
+                     href="{% url 'institution_rating' institution_id %}">{{ institution_rating }}</a>
                   {% else %}
                   <br>
-               {% endif %}
+                  {% endif %}
                </div>
             </div>
          </div>
