--- a/OJ/templates/profile_settings.html
+++ b/OJ/templates/profile_settings.html
@@ -2,19 +2,12 @@
 
 
 {% block title %}
-{% handle = handle.split('/',1) %}
-{{ handle }}
+Edit Settings
 {% endblock %}
 
 
 {% block content %}
 
-<!---- <div >
-   <p style = "color:red" > <b> International Grandmaster </b></p>
-   <h2 style = "color:red ; padding : -1px auto  auto auto"  ><b> {{ handle }} </b></h2>
-   </div>
-
-   --->
 
 <div>
 
@@ -73,7 +66,7 @@
                <a href="#">Talks</a> |
                <a href="#">Send message</a>
             </li>
-            
+
          </ul>
       </div>
    </div>
