--- a/OJ/templates/profile_settings.html
+++ b/OJ/templates/profile_settings.html
@@ -1,76 +1,76 @@
 {% extends 'layout.html' %}
 
-
 {% block title %}
-Edit Settings
+Settings
 {% endblock %}
-
 
 {% block content %}
 
+<h2>GENERAL</h2>
+<form method="post">
+    {% csrf_token %}
 
-<div>
-
-   <style>
-      .title-photo input.upload-photo {
-         color: black;
-         height: 2em;
-         line-height: 1.5em;
-         font-size: 0.75em;
-         margin: 0.5em 0.5em 0.5em 0;
-      }
-
-      .title-photo .badge {
-         position: absolute;
-         bottom: -30px;
-         transform: scale(0.75);
-      }
-   </style>
-
-   <div class="title-photo">
-      <div
-         style="float:right;border:1px solid #B9B9B9;width:330px;min-height:150px;padding:12.5px;position: relative;margin-bottom: 1em;">
-         <div>
-            <div style="min-height:200px;line-height:200px;text-align:center;">
-               <img style="margin:auto;vertical-align:middle;display:inline;"
-                  src='//userpic.codeforces.com/1515/title/ff195bd5a007b119.jpg' /> </div>
-
-         </div>
-      </div>
+    <p>
+        <label for="id_handle">Handle:</label><br>
+        <input type="text" name="handle" maxlength="32" autofocus required id="id_handle">
 
 
-      <div style="position: relative;">
-         <div>
-            <div>
-               <span> International Grandmaster </span>
-            </div>
-            <h1>
-               <a href="#">pashka</a>
-            </h1>
+    </p>
 
-            <div style="margin-top: 0.5em;">
-               <div style="font-size: 0.8em; color: #777;">Pavel Mavrin, <a href="/ratings/country/Russia">Russia</a>
-               </div>
-               <div style="font-size: 0.8em; color: #777;">From <a href="/ratings/organization/13">ITMO University</a>
-               </div>
-            </div>
-         </div>
-         <ul>
-            <li>
-               Contest rating: 100
-            </li>
-            <li>
-               Friend of: 1,731 users
-            </li>
-            <li>
-               <a href="#">Talks</a> |
-               <a href="#">Send message</a>
-            </li>
-
-         </ul>
-      </div>
-   </div>
+    <p>
+        <label for="id_name">Full name:</label><br>
+        <input type="text" name="name" maxlength="50" id="id_name">
 
 
+    </p>
 
-   {% endblock %}
+    <p>
+        <label for="id_email">Email:</label><br>
+        <input type="email" name="email" maxlength="320" required id="id_email">
+
+
+    </p>
+    <p>
+        <label for="id_password">Old Password:</label><br>
+        <input type="password" name="password" autocomplete="new-password" required id="id_password">
+
+        <small style="color: grey">Enter the same password as before, for verification.</small>
+
+    </p>
+
+    <p>
+        <label for="id_password1">New Password:</label><br>
+        <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
+
+        <small style="color: grey">
+            <ul>
+                <li>Your password can’t be too similar to your other personal information.</li>
+                <li>Your password must contain at least 8 characters.</li>
+                <li>Your password can’t be a commonly used password.</li>
+                <li>Your password can’t be entirely numeric.</li>
+            </ul>
+        </small>
+
+
+    </p>
+
+    <p>
+        <label for="id_password2">Password confirmation:</label><br>
+        <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
+
+        <small style="color: grey">Enter the same password as before, for verification.</small>
+
+    </p>
+    <p>
+        <label style="color:red">
+            {% for message in messages %}
+            {{ message }}
+            {% empty %}
+
+            {% endfor %}
+        </label>
+    </p>
+    <button type="submit">Save Changes</button>
+</form>
+
+{% endblock %}
