--- a/OJ/templates/profile.html
+++ b/OJ/templates/profile.html
@@ -93,8 +93,7 @@
                Friend of: {{ total_follower|intcomma  }} {% if total_follower > 0 %} users {% else %} user {% endif %}
             </li>
             <li>
-               <a href="#">Talks</a> |
-               <a href="#">Send message</a>
+               <a href="{% url 'conversation' handle %}">Talks</a>
             </li>
 
             {% if request.session.handle and request.session.handle == handle %}
