Implemented change country/instution functionality

--- a/OJ/templates/message.html
+++ b/OJ/templates/message.html
@@ -14,8 +14,8 @@
         {% endif %}
     </td>
     <td>
-        {% load tz %}
-        {{ time|localtime }}
+        {% load humanize %}
+        {{ time|naturaltime }}
     </td>
     <td>
         {% if seen %}
