--- a/OJ/templates/profile_settings.html
+++ b/OJ/templates/profile_settings.html
@@ -6,43 +6,43 @@ Settings
 
 {% block content %}
 
-<h2>GENERAL</h2>
-<form method="post">
+
+
+
+<form method="POST">
     {% csrf_token %}
 
+    <h2>Social </h2><br>
+
+    {% include 'autocomplete_input.html' with ItemList=countries ItemName="country" SelectedItem=current_country %}
+    {% include 'autocomplete_input.html' with ItemList=institutions ItemName="institution" SelectedItem=current_institution %}
+
+    <h2>GENERAL</h2> <br>
+
     <p>
-        <label for="id_handle">Handle:</label><br>
-        <input type="text" name="handle" maxlength="32" autofocus required id="id_handle">
-
-
+        <label for="id_handle">New Handle:</label><br>
+        <input type="text" name="new_handle" maxlength="32" id="id_handle">
     </p>
 
     <p>
-        <label for="id_name">Full name:</label><br>
-        <input type="text" name="name" maxlength="50" id="id_name">
-
-
+        <label for="id_name">New Full name:</label><br>
+        <input type="text" name="new_name" maxlength="50" id="id_name">
     </p>
 
     <p>
-        <label for="id_email">Email:</label><br>
-        <input type="email" name="email" maxlength="320" required id="id_email">
-
-
+        <label for="id_email">New Email:</label><br>
+        <input type="email" name="new_email" maxlength="320" id="id_email">
     </p>
     <p>
         <label for="id_password">Old Password:</label><br>
-        <input type="password" name="password" autocomplete="new-password" required id="id_password">
-
+        <input type="password" name="old_password" autocomplete="saved-password" id="id_password">
         <small style="color: grey">Enter the same password as before, for verification.</small>
-
     </p>
-    
+
 
     <p>
         <label for="id_password1">New Password:</label><br>
-        <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
-
+        <input type="password" name="password1" autocomplete="new-password" id="id_password1">
         <small style="color: grey">
             <ul>
                 <li>Your password can’t be too similar to your other personal information.</li>
@@ -51,31 +51,15 @@ Settings
                 <li>Your password can’t be entirely numeric.</li>
             </ul>
         </small>
-
-
     </p>
 
     <p>
         <label for="id_password2">Password confirmation:</label><br>
-        <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
+        <input type="password" name="password2" autocomplete="new-password"     id="id_password2">
 
         <small style="color: grey">Enter the same password as before, for verification.</small>
-
     </p>
-    <p>
-        <label for="id_country">Country:</label><br>
-        <input type="text" name="country" autocomplete="Bangladesh" required id="id_country">
 
-        <small style="color: grey">Select your country.</small>
-
-    </p>
-    <p>
-        <label for="id_institution">Institution:</label><br>
-        <input type="text" name="institution" autocomplete="BUET" required id="id_institution">
-
-        <small style="color: grey">Select your institution.</small>
-
-    </p>
 
     <p>
         <label style="color:red">
