Added Problems list page Needs to implement single problem [view/edit] page

--- a/OJ/templates/profile.html
+++ b/OJ/templates/profile.html
@@ -114,6 +114,9 @@
             {% if request.session.handle and request.session.handle == handle %}
 
             <li>
+               <a href="{% url 'problems' %}">Edit problems</a>  
+            </li>
+            <li>
                <a href="{% url 'profile_settings' %}">Edit Profile Settings</a>
             </li>
 
