--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -49,8 +49,9 @@
             <div class="collapse navbar-collapse" id="myNavbar">
 
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Contest</a></li>
-                    <li><a href="{% url 'ratings' %}">Rating</a></li>
+                    <li><a href="#">CONTESTS</a></li>
+                    <li><a href="#">PROBLEMSET</a></li>
+                    <li><a href="{% url 'ratings' %}">RATING</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li><a href="#"> <span class="glyphicon glyphicon-bell"> </span> Notifications </a></li> -->
