Organized Html Template

--- a/OJ/templates/problem/edit.html
+++ b/OJ/templates/problem/edit.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block title %}
-Edit - {{ PROBLEM_ID }} - OJ
+Edit - {{ PROBLEM_ID }} . {{PROBLEM_NAME}} - OJ
 {% endblock %}
 {% block content %}
 <button> <a href="{% url 'problem_view' PROBLEM_ID %}"> View </a> </button>
