--- a/OJ/templates/problem/edit.html
+++ b/OJ/templates/problem/edit.html
@@ -8,9 +8,11 @@ Edit - {{ PROBLEM_ID }} . {{PROBLEM_NAME}} - OJ
     {% csrf_token %}
     <button type="submit"> Save </button>
     <div class="header" style="text-align: center;">
-        <h3> <b> {{ PROBLEM_ID }} .<input type="text" name="PROBLEM_NAME" value="{{ PROBLEM_NAME }}"> </b> </h3> <br>
-        time limit per test : .<input type="number" name="PROBLEM_NAME" value="{{TIMELIMIT }}"> seconds <br>
-        memory limit per test : <input type="number" name="PROBLEM_NAME" value="{{ MEMORYLIMIT }}"> kilobytes <br>
+        <h3> <b> {{ PROBLEM_ID }} .<input type="text" name="PROBLEM_NAME" value="{{ PROBLEM_NAME }}" required > </b> </h3> <br>
+        time limit per test : <input type="number" name="TIMELIMIT" value="{{TIMELIMIT }}" required > miliseconds <br>
+        memory limit per test : <input type="number" name="MEMORYLIMIT" value="{{ MEMORYLIMIT }}" required > kilobytes <br>
+        tutorial link : <input type="url" name="TUTORIAL_LINK" value="{{ TUTORIAL_LINK }}"> <br>
+        difficulty : <input type="number" name="DIFFICULTY" value="{{DIFFICULTY }}"> <br>
     </div>
 
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
