Added Contests Template & SQL

--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
 
                 <ul class="nav navbar-nav">
-                    <li><a href="#">CONTESTS</a></li>
+                    <li><a href="{% url  'contests'  %}">CONTESTS</a></li>
                     <li><a href="#">PROBLEMSET</a></li>
                     <li><a href="{% url 'ratings' %}">RATING</a></li>
                 </ul>
