--- a/OJ/templates/contest/dashboard.html
+++ b/OJ/templates/contest/dashboard.html
@@ -4,5 +4,43 @@ Dashboard - {{ TITLE }} -OJ
 {% endblock %}
 {% block content %}
 {{ block.super }}
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th> # </th>
+            <th> Name </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for problem in PROBLEMS %}
+        <tr>
+            <td>
+                <a href="">
+                    {{problem.ALIAS}}
+                </a>
+            </td>
+            <td>
+                <div style="position: relative;">
+                    <div style="float: left;">
+                        <a href="#">{{problem.PROBLEM_NAME}}
+                        </a>
+                    </div>
+                    <div style="position:absolute;right:0;top:-0.5em;font-size:1rem;padding-top:1px;text-align:right;"
+                        class="notice">
 
+                        <div>
+                            standard input/output
+                        </div>
+                        {{problem.TIMELIMIT}} ms, {{problem.MEMORYLIMIT}} KB
+                    </div>
+                </div>
+            </td>
+            <td>
+                <a> <button> Submit </button> </a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
