--- a/OJ/templates/contest/layout.html
+++ b/OJ/templates/contest/layout.html
@@ -13,8 +13,8 @@
             <ul class="nav navbar-nav">
                 
                 <li><a href="{% url 'contest' CONTEST_ID %}">PROBLEMS</a></li>
-                <li><a href="#">SUBMIT CODE</a></li>
-                <li><a href="#">MY SUBMISSION</a></li>
+                <li><a href="{% url 'submit' CONTEST_ID %}">SUBMIT CODE</a></li>
+                <li><a href="{% url 'mysubmissions' CONTEST_ID %}">MY SUBMISSIONS</a></li>
                 <li><a href="#">STATUS</a></li>
                 <li><a href="#">STANDINGS</a></li>
             </ul>
