--- a/OJ/templates/contest/dashboard.html
+++ b/OJ/templates/contest/dashboard.html
@@ -37,7 +37,7 @@ Dashboard - {{ TITLE }} -OJ
                 </div>
             </td>
             <td>
-                <a> <button> Submit </button> </a>
+                <a href="{% url 'submit_problem' CONTEST_ID problem.ALIAS %}"> <button> Submit </button> </a>
             </td>
         </tr>
         {% endfor %}
