--- a/OJ/templates/contest/layout.html
+++ b/OJ/templates/contest/layout.html
@@ -15,7 +15,7 @@
                 <li><a href="{% url 'contest' CONTEST_ID %}">PROBLEMS</a></li>
                 <li><a href="{% url 'submit' CONTEST_ID %}">SUBMIT CODE</a></li>
                 <li><a href="{% url 'mysubmissions' CONTEST_ID %}">MY SUBMISSIONS</a></li>
-                <li><a href="#">STATUS</a></li>
+                <li><a href="{% url 'status' CONTEST_ID %}">STATUS</a></li>
                 <li><a href="#">STANDINGS</a></li>
             </ul>
         </div>
