--- a/OJ/templates/contest/mysubmissions.html
+++ b/OJ/templates/contest/mysubmissions.html
@@ -1,7 +1,1 @@
-{% extends 'contest/layout.html' %}
-{% block title %}
-    My Submissions - {{ TITLE }} - OJ
-{% endblock %}
-{% block content %}
-{{ block.super }}
-{% endblock %}
+{% include 'contest/status_generic.html' with PAGE_HEADER='My Submissions' %}
