--- a/OJ/templates/contest/submission_view.html
+++ b/OJ/templates/contest/submission_view.html
@@ -32,7 +32,7 @@ Submission #{{SUBMISSION_ID}} - OJ
         </tr>
         <tr>
             <td colspan="9">
-                {{ RAW_CODE }}
+                <pre>{{ RAW_CODE }}</pre>
             </td>
         </tr>
     </tbody>
