--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -52,14 +52,15 @@
                     <li><a href="{% url  'contests'  %}">CONTESTS</a></li>
                     <li><a href="#">PROBLEMSET</a></li>
                     <li><a href="{% url 'ratings' %}">RATING</a></li>
+                    <li><a href="{% url 'submissions' %}"> STATUS </a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li><a href="#"> <span class="glyphicon glyphicon-bell"> </span> Notifications </a></li> -->
                     {% if request.session.handle %}
                     <li><a href="{% url 'messages' %}"> <span class="glyphicon glyphicon-envelope"> </span>
-                        {% if total_new_messages and total_new_messages > 0 %} 
-                         <span class="badge"> {{ total_new_messages }} </span> 
-                        {% endif %}
+                            {% if total_new_messages and total_new_messages > 0 %}
+                            <span class="badge"> {{ total_new_messages }} </span>
+                            {% endif %}
                         </a></li>
                     <li><a href="{% url 'profile' request.session.handle %}"> <span
                                 class="glyphicon glyphicon-user"></span> {{ request.session.handle }} </a></li>
